style.scss
/* ... */
/* HOME */

.home .content {
	margin-bottom: $col1 + $gutter;
}

.home .half {
	display: block;
	height: auto;
	margin-bottom: $col1;
}

.home .intro {
	height: $cols4;
	h3 {
		margin: 0 1em .5em 0;
	  &:after {
	    display: block;
	    position: relative;
	    height: 120px;
	    width: 100%;
	    background: url('img/culturegraphic-process.svg') no-repeat center center;
	    content: ' ';
	    -o-background-size: 100% auto;
			-webkit-background-size: 100% auto;
			background-size: 100% auto;
	  }
	}
}

.home .project {
	h3 {
		@include oswald-font;
		font-style: italic;
		margin: 0;
		display: block;
		position: absolute;
		left: 0;
		top: 0;
		margin: 0;
		width: auto;
		font-size: .75em;
		background: rgba(0,0,0,0.5);
		color: rgba(255,255,255,1);
		letter-spacing: .25em;
		padding: .5em 1em;
	}
	ul.processes {
		list-style: none;
		padding: 0;
		margin: 0;
		position: absolute;
		top: 0;
		left: 0;
		display: none;
		li {
			@include oswald-font;
			font-style: italic;
			margin: 0;
			display: block;
			float: left;
			clear: left;
			font-size: .75em;
			background: rgba(0,0,0,0.4);
			color: rgba(255,255,255,1);
			letter-spacing: .2em;
			padding: .5em 1em;
		}
	}
	&:hover ul.processes, &:hover h3 {
		background: rgba(0,0,0,0.9);
	}
}

/* SINGLE, PAGE */

.single, .page {
	.intro {
		@include width(12, $gutter);
		.title {
			@include width(6);
			margin-bottom: 0;
			h1 {
				@include serif-font;
				font-style: italic;
				font-size: 3em;
				line-height: 1.1em;
				margin-top: 0;
				margin-bottom: 1em;
			}
		}
		ul.processes {
			@include width(4, $gutter);
			@include prefix(2);
			list-style: none;
			padding: 0;
			li {
				@include width(2);
				@include helvetica-font;
				font-size: 1em;
			}
		}
	}
	.content {
		p {
			@include serif-font;
			line-height: 1.4em;
			font-size: 1.5em;
			margin: 1em 0;
			padding-right: $col1;
			display: block;
			float: left;
			width: auto;
		}
		img {
			margin-bottom: $gutter;
		}
		.wp-caption {
			margin-bottom: 3em;
			display: block;
			float: left;
			width: auto !important;
			position: relative;
			img, iframe {
				margin-bottom: .75em;
			}
			p {
				position: absolute;
				left: 0;
				bottom: -1.25em;
				width: 90%;
				@include helvetica-font;
				color: $gray;
				margin: 0;
				line-height: 1.6em;
				text-transform: none;
				letter-spacing: 1em;
				font-size: 1.1em;
				padding: 0;
			}
		}
	}
}

/* SERVICES */

.services {
	@include width(12, $gutter);
	@include prefix(3, $gutter);
	margin-bottom: $cols2;
	padding-top: .5em;
	ul {
		li {	
			@include width(3);
			font-size: 1em;
			border-bottom: .2em solid $ultralight_gray;
			margin-bottom: 1em;
			h3 {
				@include serif-font;
				font-size: 1.4em;
				font-style: italic;
				margin-bottom: 0;
			}
			p {
				display: none;
				margin: 0;
				font-size: .9em;
				color: $gray;
			}
		}
	}
}

/* PRINCIPAL */

.principal {
	@include width(12, $gutter);
	@include prefix(3, $gutter);
	margin-bottom: $col1;
  .bio {
  	@include width(6);
  	p {
			.pic {
				@include width(2);
				margin-bottom: .5em;
				margin-top: .5em;
				outline: 1px solid $light_gray;
				line-height: 1em;
				padding: 0;
				height: 105px;
				overflow: hidden;
				font-size: 1.1em;
				img {
					width: 100%;
					height: auto;
				}
			}
		}
	}
	.bio-meta {
		@include width(6, $gutter);
		h3 {
			font-size: 1em;
			letter-spacing: .1em;
			line-height: 1em;
			border-bottom: .2em solid $ultralight_gray;
			margin-bottom: $gutter / 2;
			color: $gray;
		}
		ul {
			list-style: none;
			padding: 0;
			li {
				margin-left: 0;
			}
		}
		.pinterest {
			@include width(4, $gutter);
			margin-top: -1em;
			h3 {
				margin-right: $gutter;
			}
			li {
				@include width(2);
				height: (($column * 2) + $gutter) * .666;
				margin-bottom: $gutter / 2;
				overflow: hidden;
				outline: 1px solid $light_gray;
				background: $light_gray;
				p {
					margin: 0;
					font-size: 0;
					line-height: 0;
					text-indent: -9999em;
					overflow: hidden;
				}
				img {
					min-height: 100%;
					min-width: 100%;
					max-width: 100%;
				}
			}
		}
		.twitter {
			@include width(2);
			margin-top: -1em;
			.timestamp {
				font-size: .8em;
				text-transform: uppercase;
				display: block;
			}
		}
		.contact {
			@include width(2);
			margin-top: -1em;
		}
	}
}

/* ABOUT */

body.page {
	.content {
		@include width(15);
		margin-left: $gutter;
		margin-top: 6em;
		img.portrait {
			margin: 3em 0;
			width: 320px;
			height: 320px;
			display: block;
			margin: 0 auto;
		}
		h1 {
			@include helvetica-font;
			font-weight: bold;
			margin: 1em auto 0;
			font-size: 2.4em;
		}
		h2 {
			font-size: 1.6em;
			line-height: 1.1em;
			color: $green;
		}
		h3 {
			@include width(3, $gutter);
			color: $light-gray;
		}
		section {
			@include width(9, $gutter);
		}
		p {
			margin-top: 0;
		}
		li {
			@include width(2);
			font-size: 1.6em;
			color: $green;
			line-height: 1.4em;
		}
	}
}

/* FOOTER */

.footer {
	@include width(12, $gutter);
	@include prefix(3, $gutter);
	margin-bottom: $col1;
	color: $light_gray;
	p {
		font-size: .9em;
	}
	.grid_hover {
	 z-index: 99999;
	 position: relative;
	}
	a {
		color: $light_gray;
		text-decoration: underline;
		&:hover {
			color: $gray;
		}
	}
}


// For js function to show grid on shift press
.show_grid {
	display: none;
  width: $cols15 + $gutter;
  padding-left: $gutter;
  position: fixed;
  top: 0;
  margin: auto 0;
  overflow: visible;
  background: rgba(0,200,254,0.1);
  height: 100%;
  z-index: -1;
	.column {
		@include width(1);
		height: 100%;
		background: rgba(0,200,254,0.1);
		padding-top: 1em;
		text-align: center;
		color: rgba(0,200,254,1);
	}
}






/* ADAPTIONS */
@media screen and (min-width: 1000px) {
	.header {
		position: fixed;
	}
}
/* ... */

